--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,3 +15,76 @@
  */
  @import "bootstrap";
  @import "font-awesome";
+ body { background: lightblue; }
+.max-vh-100 { max-height: 100vh; }
+.max-vh-75 { max-height: 75vh; }
+.max-vh-50 { max-height: 50vh; }
+.max-vh-25 { max-height: 25vh; }
+.min-vh-100 { min-height: 100vh; }
+.min-vh-75 { min-height: 75vh; }
+.min-vh-50 { min-height: 50vh; }
+.min-vh-25 { min-height: 25vh; }
+.navbar-nav > li > a:hover, .navbar-nav > li > a:focus {
+    background-color: #FFFF00;
+    color: #FFC0CB;
+}
+// .card-flip {
+//   perspective: 1000px;
+//   &:hover .flip,
+//   &.hover .flip {
+//     transform: rotateY(180deg);
+//   }
+// }
+
+// .card-flip,
+// .front,
+// .back {
+//   width: 100%;
+//   height: 480px;
+// }
+.card-flip.flipped {
+    -webkit-transform: rotateY( 180deg );
+    -moz-transform: rotateY( 180deg );
+    -o-transform: rotateY( 180deg );
+    transform: rotateY( 180deg );
+}
+
+.card-flip {
+    // width: 100%;
+    // height: 100%;
+    // position: absolute;
+    -webkit-transition: -webkit-transform 1s;
+    -moz-transition: -moz-transform 1s;
+    -o-transition: -o-transform 1s;
+    transition: transform 1s;
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    -o-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    -webkit-transform-origin: 50% 50%;
+}
+
+// .card-flip div {
+//   position: absolute;
+//   -webkit-backface-visibility: hidden;
+//   -moz-backface-visibility: hidden;
+//   -o-backface-visibility: hidden;
+//   backface-visibility: hidden;
+// }
+
+.front,
+.back {
+  backface-visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.front {
+  z-index: 2;
+  transform: rotateY(0deg);
+}
+
+.back {
+  transform: rotateY(180deg);
+}
