--- a/app/views/animals/_form.html.erb
+++ b/app/views/animals/_form.html.erb
@@ -17,13 +17,13 @@
   </div>
 
   <div class="field">
-    <%= form.label :pic %>
+    <%= form.label :pic, "Link to picture" %>
     <%= form.text_field :pic %>
   </div>
 
   <div class="field">
     <%= form.label :description %>
-    <%= form.text_field :description %>
+    <%= form.text_area :description %>
   </div>
 
   <div class="actions">
