--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Animals</h1>
+  <!-- <h1>Animals</h1> -->
 
-<table>
+<!-- <table>
   <thead>
     <tr>
       <th>Name</th>
@@ -13,19 +13,95 @@
   </thead>
 
   <tbody>
-    <% @animals.each do |animal| %>
+    <%# @animals.each do |animal| %>
       <tr>
-        <td><%= animal.name %></td>
-        <td><%= animal.pic %></td>
-        <td><%= animal.description %></td>
-        <td><%= link_to 'Show', animal %></td>
-        <td><%= link_to 'Edit', edit_animal_path(animal) %></td>
-        <td><%= link_to 'Destroy', animal, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%# = animal.name %></td>
+        <td><%# = animal.pic %></td>
+        <td><%# = animal.description %></td>
+        <td><%# = link_to 'Show', animal %></td>
+        <td><%# = link_to 'Edit', edit_animal_path(animal) %></td>
+        <td><%# = link_to 'Delete', animal, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
-    <% end %>
+    <%# end %>
   </tbody>
 </table>
 
 <br>
 
-<%= link_to 'New Animal', new_animal_path %>
+<%= link_to 'New Animal', new_animal_path %> -->
+<div class="container" id="card_container">
+  <div class="row">
+    <% @animals.each do |animal| %>
+      <div class="col-sm-6 col-lg-4">
+        <!-- <div> -->
+        <div class="card-flip" style="height: 25rem;">
+          <!-- <div class="flip"> -->
+            <div class="front">
+              <div class="card">
+                <img class="card-img-top" src="<%= animal.pic %>" alt="<%= animal.name %>">
+                <div class="card-body">
+                  <h5 class="card-title"><%= animal.name %></h5>
+                <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+                <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                  <%= link_to 'Show', animal %>
+                  <%= link_to 'Edit', edit_animal_path(animal) %>
+                  <%= link_to 'Delete', animal, method: :delete, data: { confirm: 'Are you sure?' } %>
+                  <button>flip</button>
+                  <!-- <a class="rotate-btn float-right" data-card="card-2"><i class="fas fa-share-alt fa-lg"></i></a> -->
+                </div>
+              </div>
+            </div>
+            <div class="back">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title"><%= animal.name %></h5>
+                  <p class="mh-75" style="height: 15rem; overflow-y: scroll;"><%= animal.description %></p>
+                  <!-- <a class="rotate-btn float-right" data-card="card-2"><i class="fas fa-share-alt fa-lg"></i></a> -->
+                <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+                <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                  <button>flip back</button>
+                </div>
+              </div>
+            </div>
+          <!-- </div> -->
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
+<script>
+  const cardContainer = document.querySelector("div#card_container");
+  function findFlip(button) {
+    let ancestor = button.parentElement;
+    while (true) {
+      // if (ancestor !== null) {
+      //   console.log(ancestor.classList)
+      // }
+      if (ancestor === null || ancestor.classList.contains('card-flip')) {
+        break;
+      }
+      ancestor = ancestor.parentElement;
+    }
+    return ancestor;
+  }
+  // function arrayRemove(arr, value) {
+  //   return arr.filter(function(ele){ return ele != value; });
+  // }
+  function toggleClass(element, className) {
+    if (element.classList.contains(className)) {
+      element.classList.remove(className);
+    } else {
+      element.classList.add(className);
+    }
+  }
+  cardContainer.addEventListener('click', (e) => {
+    // console.log(e.target.nodeName, e.target.type, e.target.textContent);
+    if (e.target.nodeName === 'BUTTON' && e.target.type === 'submit') {
+      const flipDiv = findFlip(e.target);
+      if (flipDiv !== null) {
+        // console.log("found the flipdiv");
+        toggleClass(flipDiv,'flipped');
+      }
+    }
+  });
+</script>
