--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -1,19 +1,21 @@
 <p id="notice"><%= notice %></p>
-
+<!-- <div class="d-flex justify-content-center"> -->
+<div class="container max-vh-75">
 <p>
   <strong>Name:</strong>
   <%= @animal.name %>
 </p>
 
 <p>
-  <strong>Pic:</strong>
-  <%= @animal.pic %>
+  <strong>Picture:</strong>
+  <img src=<%= @animal.pic %> alt=<%= @animal.name%> class="mw-75 mh-75">
 </p>
 
 <p>
   <strong>Description:</strong>
   <%= @animal.description %>
 </p>
-
+</div>
+<!-- </div> -->
 <%= link_to 'Edit', edit_animal_path(@animal) %> |
 <%= link_to 'Back', animals_path %>
